# INE5426

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: 1.lcc  exemplo1.lcc  program_1.lcc  program_2.lua  program_3.lua
examples/tests/: error.lcc  exemplo1.lcc  exemplo2.lcc  success.lcc  success.lua
output/: lex-program1.txt  lex-program2.txt  lex-program3.txt  lex-program4.txt
source-code/: error.lua  program1.lua  program2.lua  program3.lua  success.lua
source-code/moodle/: exemplo2.lua
src/: data.py  lexer.py  ll1.txt  main.py  output.py  parser.py  syntax.py  test.py  typecheck.py  types.py
test-code/: program1.lua  program2.lua  program3.lua  program4.lua  small.lua  smh.lua
test-code/semantic-analysis/: invalid-break-operator.lua  invalid-operations.lua  invalid-variable-declaration.lua  typecheck.lua  valid-break-operator.lua  valid-operations.lua  valid-variable-declaration.lua
test-code/syntax-analysis/: printstat.lua  success.lua
